--- a/src/$core$/ScrollBox.scss
+++ b/src/$core$/ScrollBox.scss
@@ -4,7 +4,7 @@
     initial-value: 0;
 };
 
-@property --sb-color {
+@property --scrollbar-color {
     syntax: "<color>";
     inherits: true;
     initial-value: #10101040;
@@ -77,7 +77,7 @@
         position: relative;
         overflow: hidden;
         inset: 0px;
-        padding: 0px;
+        padding: 0px !important;
         box-sizing: border-box;
 
         //
@@ -98,7 +98,7 @@
         --percent-y: 0.0;
 
         //
-        --sb-color: #10101040;
+        --scrollbar-color: #10101040;
 
         //
         rotate: none;
@@ -140,12 +140,16 @@
             //
             overflow: scroll;
             display: block flow;
+            padding: 0px;
+            scrollbar-color: transparent !important;
             scrollbar-gutter: stable both-edges !important;
             scrollbar-width: none !important;
             grid-row: 1 / 2 span !important;
             grid-column: 1 / 2 span !important;
             inline-size: 100% !important;
             block-size: 100% !important;
+            border: none 0px transparent !important;
+            outline: none 0px transparent !important;
 
             //
             will-change: contents, scroll-position;
@@ -162,6 +166,7 @@
             position: relative;//sticky;
             display: block flow;
             inset: 0px;
+            box-sizing: border-box;
 
             //
             line-height: 0px;
@@ -175,15 +180,17 @@
             inline-size: 100%;
             block-size: 100%;
 
+            //
             & :where(.thumb) {
                 pointer-events: auto;
+                box-sizing: border-box;
 
                 position: static;
                 display: block flow;
                 line-height: 0px;
 
                 border-radius: 0.125rem;
-                background-color: var(--sb-color, #10101040);
+                background-color: var(--scrollbar-color, #10101040);
 
                 user-select: none;
                 touch-action: none;
