--- a/src/$core$/ScrollBox.scss
+++ b/src/$core$/ScrollBox.scss
@@ -136,6 +136,12 @@
         isolation: auto;
 
         //
+        &, & *, ::slotted(*) {
+            transition-behavior: allow-discrete;
+            interpolate-size: allow-keywords;
+        }
+
+        //
         &:not([data-hidden]) {
             display: grid !important;
         }
