--- a/src/$core$/ScrollBox.scss
+++ b/src/$core$/ScrollBox.scss
@@ -243,11 +243,12 @@
                 user-select: none;
                 touch-action: none;
 
+                /*
                 cursor: grab;
 
                 &:active {
                     cursor: grabbing;
-                }
+                }*/
             }
         }
 
