--- a/src/$core$/ScrollBox.scss
+++ b/src/$core$/ScrollBox.scss
@@ -90,7 +90,7 @@
         & {
             --percent-x: 0.0;
             --percent-y: 0.0;
-            --scrollbar-color: #10101040;
+            --scrollbar-color: var(--current-surface-color, #10101040);
         }
 
         //
@@ -244,7 +244,7 @@
                 line-height: 0px;
 
                 border-radius: 0.125rem;
-                background-color: var(--scrollbar-color, #10101040);
+                background-color: var(--scrollbar-color, #10101040) !important;
 
                 user-select: none;
                 touch-action: none;
