--- a/src/$core$/ScrollBox.scss
+++ b/src/$core$/ScrollBox.scss
@@ -125,6 +125,9 @@
             will-change: auto;
             perspective: none;
             isolation: auto;
+
+            // unsupported
+            writing-mode: horizontal-tb !important;
         }
 
         //
@@ -213,6 +216,10 @@
                 //
                 inline-size: 100%;
                 block-size: 100%;
+
+                //
+                writing-mode: horizontal-tb !important;
+                direction: ltr !important;
             }
 
             //
@@ -236,6 +243,10 @@
 
                     user-select: none;
                     touch-action: none;
+
+                    //
+                    writing-mode: horizontal-tb !important;
+                    direction: ltr !important;
                 }
 
                 //
