Resume animations support

--- a/src/$core$/ScrollBox.scss
+++ b/src/$core$/ScrollBox.scss
@@ -144,8 +144,7 @@
         }
 
         //
-        &:not([data-hidden])
-        { display: grid !important; }
+        &:not([data-hidden]) { display: grid !important; }
 
         //
         &, & > :where(*)
